@@ -1,3 +1,9 @@
+Sat Jul 18 07:13:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>
+
+	* gtkgame.c - search the stack of grab owners for the
+	  current caller of ResumeInput and trim the stack if 
+	  found
+	
 Sat Jul 18 00:22:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>
 
 	* rollout.c gtkgame.c - update after every game rolled out,
